# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  package-lock.json  package.json  poetry_to_requirements.py  pyproject.toml  renovate.json  setup.cfg  tox.ini
.github/workflows/: test.yaml
poetry_to_requirements.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pre_commit_hooks/: poetry_to_requirements.py
test/: test_main.py
test/nested_pyproject/app_two/: pyproject.toml
