[metadata]
name = poetry_to_requirements
version = 0.0.1
description = Pre-commit hook to convert Poetry dependancies to pip requirements.txt.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christopherpickering/pre-commit-poetry-to-requirements
author = Christopher Pickering
author_email = christopher.pickering@keemail.me
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    poetry-to-requirements = pre_commit_hooks.poetry_to_requirements:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-tests.*]
disallow_untyped_defs = false
