[tool.poetry]
name = "top-level-pyproject"
version = "0.1.0"
description = ""
authors = ["Christopher Pickering"]
readme = "README.md"
packages = [{include = "top_level_pyproject"}]

[tool.poetry.dependencies]
python = "^3.7.2"
requests = "2.28.2"
djlint = "1.19.13"

[tool.poetry.group.dev.dependencies]
pylint = "2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
